# AlignAI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD_SYSTEM.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_TESTING_GUIDE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-test.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  release-please.yml  release.yml
docs/: AI_ENGINEERING.md  ARCHITECTURE.md  RELEASING.md  USAGE.md  alignment_rules.md
packaging/: alignai.spec  build.py  signer.py
scripts/: preflight.py
src/alignai/: __init__.py  main.py
src/alignai/agents/: align_ai_agent_steps.py  align_ai_runner.py  aligned_cover_letter_fields.py  aligned_resume_fields.py  ats_score_fields.py  chunked_resume_alignment.py  job_brief_fields.py  llm_json_coercion.py  match_score_fields.py  mcp.py  merged_resume_fields.py  model_settings_compat.py  parsed_resume_fields.py  section_aligned_fields.py  structured_cover_letter_fields.py  structured_resume_fields.py
src/alignai/agents/prompts/: __init__.py  ats_scorer.txt  cover_letter_aligner.txt  cover_letter_structurer.txt  job_analyst.txt  match_scorer.txt  resume_aligner.txt  resume_merger.txt  resume_parser.txt  resume_section_aligner.txt  resume_structurer.txt
src/alignai/agents/prompts/schema_hints/: cover_letter_structure.txt  job_brief_shape.txt  merger_output.txt  resume_parser_shape.txt  resume_structure.txt
src/alignai/application/: create_alignment.py  handle_telegram_message.py  list_alignments.py  parse_aligned_cover_letter.py  parse_aligned_resume.py  pdf_markup.py  set_base_documents.py  telegram_outcome.py  verify_credentials.py
src/alignai/domain/: models.py  ports.py
src/alignai/infra/: app_paths.py  document_repository.py  job_fetcher_chain.py  job_fetcher_http.py  job_fetcher_playwright.py  json_settings_store.py  keyring_secrets.py  llm_openai_compat.py  pdf_input_pypdf.py  pdf_render_chromium.py  sqlite_alignment_repository.py  telegram_bridge.py  telegram_token_verifier.py  template_renderer.py  text_cleanup.py
src/alignai/infra/templates/: cover_letter.html  resume.html
src/alignai/ui/: async_runner_thread.py  blocking_runner_thread.py  home_page.py  main_window.py  new_alignment_page.py  result_page.py  settings_page.py  styles.py
tests/: conftest.py  test_parse_aligned_cover_letter.py  test_parse_aligned_resume.py
tests/fakes/: fake_agent_runner.py  recording_pdf_renderer.py
tests/fixtures/job_pages/: cf_block.html  iframe_xorg.html  image_only.html  jsonly_linkedin.html  readable_meta.html
tests/integration/: test_alignment_from_fixture.py
tests/unit/agents/: test_aligned_cover_letter_fields.py  test_aligned_resume_fields.py  test_chunked_resume_alignment.py  test_job_brief_fields.py  test_llm_json_coercion.py  test_match_score_fields.py  test_merged_resume_fields.py  test_model_settings_compat.py  test_model_validators.py  test_parsed_resume_fields.py  test_prompt_loader.py  test_section_aligned_fields.py  test_structured_cover_letter_fields.py  test_structured_resume_fields.py
tests/unit/application/: test_create_alignment.py  test_pdf_markup.py  test_supporting_use_cases.py
tests/unit/domain/: test_models.py  test_ports.py
tests/unit/infra/: test_job_fetcher_http.py  test_text_cleanup.py
tools/telegram_presence_proxy/: README.md  main.py
